style.css
*,
*::after,
*::before {
  box-sizing: border-box;
}

:root {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  --orangeYellow: linear-gradient(37deg, #ff6437 0%, #ffc864 100%);
  --purpleBlue: linear-gradient(-137deg, #4100f4 0%, #af2996 100%);
  --tealGreen: linear-gradient(-137deg, #19e68c 0%, #1d7f6e 100%);
  --list-item-width: 200px;
  background-color: #303030;
  color: white;
}

.list {
  list-style: none;
  padding: 0;
  margin: 0;

  display: grid;
  grid-auto-flow: column;
  grid-template-columns: repeat(auto-fill, var(--list-item-width));
  column-gap: 8px;

  overflow: scroll;
  scroll-snap-type: x;
}
.list > * {
  scroll-snap-align: center;
}
.item {
  min-width: var(--list-item-width);
  height: 100px;
  padding: 8px;
  border-radius: 8px;
}
.list--service .item {
  background: var(--tealGreen);
}
.list--feature .item {
  background: var(--orangeYellow);
}
.list--data .item {
  background: var(--purpleBlue);
}

@media screen and (min-width: 500px) {
  .item {
    scroll-snap-align: start;
  }
}

